Kateirna modified README

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This repository for a Git workshop.
-It contains some python code for ML.
+Itt contains some python code for ML.
 
 New line
+Line number 2
