Katia modified README file

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This repository for a Git workshop.
-It contains some python code for ML.
+iIt contains some python code for ML.
 
 New line
+One more line
